--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "typechain": "yarn hardhat typechain"
   },
   "devDependencies": {
-    "@chainlink/contracts": "^0.4.0",
+    "@chainlink/contracts": "^0.4.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.5.0",
+    "@pinata/sdk": "^1.1.26",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.13",
@@ -34,14 +37,13 @@
     "hardhat-deploy": "^0.9.29",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.7",
+    "path": "^0.12.7",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.13",
     "ts-node": "^10.4.0",
     "typechain": "^8.0.0",
-    "typescript": "^4.5.5",
-    "@typechain/ethers-v5": "^10.0.0",
-    "@typechain/hardhat": "^6.0.0"
+    "typescript": "^4.5.5"
   }
 }
